base/release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
  namespace: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: azure-vote-back
          image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
          ports:
            - containerPort: 6379
              name: redis
          resources:
            limits:
              cpu: 500m
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: votingapp
spec:
  ports:
    - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: azure-vote-front
          image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: votingapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      nodePort: 80
  selector:
    app: azure-vote-front
