base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp-ingress
  namespace: votingapp
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: pythonapp.mkaey.de
      http:
        paths:
          - backend:
              service:
                name: azure-vote-front
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pythonapp.mkaey.de
      secretName: ingress-tls-csi
